# To-Do-List-Management-with-Pepper

./: README.md  READMEx.md
src/pepper_interfaces/: CMakeLists.txt
src/pepper_interfaces/msg/: Detection.msg  Detections.msg  MetaMic.msg  SoftBioInfo.msg  SoftBioList.msg
src/pepper_interfaces/srv/: Asr.srv  ObjectDetection.srv
src/pepper_nodes/: package.xml  setup.py
src/pepper_nodes/conf/: pepper_params.yaml
src/pepper_nodes/launch/: pepper_bringup.launch.py
src/pepper_nodes/pepper_nodes/: asr.py  awareness_node.py  camera_show_node.py  head_motion_node.py  image_input_node.py  object_detection.py  tablet_node.py  text2speech_node.py  wakeup_node.py
src/pepper_nodes/pepper_nodes/respeaker/: config_dict.py  respeaker_node.py
src/project_interfaces/: CMakeLists.txt  package.xml
src/project_interfaces/msg/: SpeechEvent.msg
src/project_interfaces/srv/: GetAudioData.srv  LLMInteraction.srv
src/project_nodes/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/project_nodes/launch/: project.launch.py
src/project_nodes/project_nodes/: audio_pipeline_node.py  facial_recognition.py  llm_node.py  orchestrator_node.py
