<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_nodes</name> 
  
  <version>0.0.0</version>
  <description>Gestione To-Do List Pepper con LLM</description>
  <maintainer email="a.cuciniello9@studenti.unisa.it">Alex Cuciniello</maintainer>
  <maintainer email="f.demaio28@studenti.unisa.it">Federica De Maio</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  
  <depend>cv_bridge</depend>
  
  <depend>project_interfaces</depend>
  <depend>pepper_interfaces</depend>
  <depend>audio_common_msgs</depend>
  
  <exec_depend>pepper_nodes</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-httpx</exec_depend> 
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>